--- a/pagina1-1.html
+++ b/pagina1-1.html
@@ -15,6 +15,6 @@
 	  <img src="imagenes/indiana-dunes-state-park-1848559_1280.jpg" width="350" height="225" alt="Paisaje playa">
 <img src="imagenes/water-1018808_1280.jpg" width="350" height="225" alt="Piscina">
 <img src="imagenes/summer-2880261_1280(1).jpg" width="350" height="225" alt="Piscina">
-	<p>Para volver pinchar <a href="file:///home/usuario/Escritorio/index.html">aquí</a>.</p>
+	<p>Para volver pinchar <a href="https://saracc2.github.io/index.html">aquí</a>.</p>
   </body>
 </html>
