--- a/pagina1-2.html
+++ b/pagina1-2.html
@@ -13,6 +13,6 @@
 <li>Punta umbría (HUelva) , Nerja (Malaga) ,Playas de los muertos (Almeria) etc...</li>
 <img src="imagenes/girl-429380_1280.jpg" width="350" height="225" alt="Playa">
 <img src="imagenes/seashells-1337565_1280.jpg" width="350" height="225" alt="Conchas">
-	<p>Para volver pinchar <a href="file:///home/usuario/Escritorio/index.html">aquí</a>.</p>
+	<p>Para volver pinchar <a href="https://saracc2.github.io/index.html">aquí</a>.</p>
   </body>
 </html>
