--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<br><i>En esta página vamos hablar sobre planes que se pueden hacer en un  caluroso verano </i></br>
 	<br>La pagina1-1 sera para hablar sobre planes</br>
 <br>La pagina1-2 hablaremos sobre las playas</br>
+<br>He elgido el verano por que me encanta tener mucho tiempopara hacer actividades , quedar , ir a la playa , disfrutor de las horas de sol , escuchar música etc.Despues de haber tenido muchos examenes lo mejor estener vacaciones .
 <img src="imagenes/beach-1236581_1280.jpg" width="350" height="225" alt="Paisaje playa">
 <p>.  <a href="pagina1-1.html">Página1-1</a></p>
   <p>.  <a href="pagina1-2.html">Página1-2</a></p>
