--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 	<br><i>En esta página vamos hablar sobre planes que se pueden hacer en un  caluroso verano </i></br>
 	<br>La pagina1-1 sera para hablar sobre planes</br>
 <br>La pagina1-2 hablaremos sobre las playas</br>
-<br>He elegido el verano por que me encanta tener mucho tiempopara hacer actividades , quedar , ir a la playa , disfrutor de las horas de sol , escuchar música etc.</br>
+<br>He elegido el verano por que me encanta tener mucho tiempo para hacer actividades , quedar , ir a la playa , disfrutar de las horas de sol , escuchar música etc.</br>
 <br>Aquí dejo un video sobre curiosidades del verano</br>
 <br>https://youtu.be/cyeBBG0FnLg?feature=shared</br>
+<img src="imagenes/beach-1236581_1280.jpg" width="300" height="225" alt="Paisaje playa">
 <p>.  <a href="pagina1-1.html">Página1-1</a></p>
   <p>.  <a href="pagina1-2.html">Página1-2</a></p>
   </body>
