--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 	<br>La pagina1-1 sera para hablar sobre planes</br>
 <br>La pagina1-2 hablaremos sobre las playas</br>
 <br>He elegido el verano por que me encanta tener mucho tiempo para hacer actividades , quedar , ir a la playa , disfrutar de las horas de sol , escuchar música etc.</br>
-<br>Aquí dejo un video sobre curiosidades del verano</br>
-<br>https://youtu.be/cyeBBG0FnLg?feature=shared</br>
 <img src="imagenes/beach-1236581_1280.jpg" width="300" height="225" alt="Paisaje playa">
+<hr>
+<b>Aqui dejo un video sobre curiosidades del verno</b>
+<br><iframe width="560" height="315" src="https://www.youtube.com/embed/cyeBBG0FnLg?si=NkY1bAcNVFd76wG0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></br>
 <p>.  <a href="pagina1-1.html">Página1-1</a></p>
   <p>.  <a href="pagina1-2.html">Página1-2</a></p>
   </body>
