--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Hecho por Sara</title>
   </head>
   <body style="background-color:#ffd6be">
-	  <p><b>Bienvenidos a planes de verano </b><br>
+	  <h1><b>Bienvenidos a planes de verano </b></h1>
     <br>
 	<hr>
   </body>
