--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <br>He elegido el verano por que me encanta tener mucho tiempo para hacer actividades , quedar , ir a la playa , disfrutar de las horas de sol , escuchar música etc.</br>
 <img src="imagenes/beach-1236581_1280.jpg" width="300" height="225" alt="Paisaje playa">
 <img src="imagenes/palm-trees-3058728_1280.jpg" width="300"height="225" alt="Palmeras">
+<img src="imagenes/beach-2179183_1280.jpg" width="300" height="225" alt="Olas de la playa">
 <hr>
 <b>Aqui dejo un video sobre curiosidades del verano</b>
 <br><iframe width="560" height="315" src="https://www.youtube.com/embed/cyeBBG0FnLg?si=NkY1bAcNVFd76wG0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></br>
