--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <hr>
 <b>Aqui dejo un video sobre curiosidades del verano</b>
 <br><iframe width="560" height="315" src="https://www.youtube.com/embed/cyeBBG0FnLg?si=NkY1bAcNVFd76wG0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></br>
-<li><p>  <a href="pagina1-1.html">Página1-1</a></p></li>
-  <li><p>  <a href="pagina1-2.html">Página1-2</a></p></li>
+<li><p> . <a href="pagina1-1.html">Página1-1</a></p></li>
+  <li><p> . <a href="pagina1-2.html">Página1-2</a></p></li>
   </body>
 </html> 
