--- a/pagina1-2.html
+++ b/pagina1-2.html
@@ -10,7 +10,10 @@
 	   <br>Aquí vamos hablar sobre sitios para visitar en vacaciones y playas a las cuales va mucha gente</br>
 	<br>Lugares más visitados en verano son :ESpaña, Italia,Portugal , Grecia , Francia y muchos más pero estos son los más famosos</br>
 	<br>Muchas personas suelen veranear en andalucia y aqui te piongo algunos ejemplos de las playas que más me gustan a mi</br>
-<li>Punta umbría (Huelva) , Nerja (Malaga) ,Playas de los muertos (Almeria) etc...</li>
+	<ol> 
+<li>Punta umbría (Huelva)</li> 
+<li>Nerja (Malaga)</li> 
+<li>Playas de los muertos (Almeria) etc...</li>
 <img src="imagenes/girl-429380_1280.jpg" width="350" height="225" alt="Playa">
 <img src="imagenes/seashells-1337565_1280.jpg" width="350" height="225" alt="Conchas">
 	<p>Para volver pinchar <a href="http://saracc2.github.io/index.html">aquí</a>.</p>
