--- a/pagina1-2.html
+++ b/pagina1-2.html
@@ -8,7 +8,7 @@
     <h1>Página1-2</h1>
 	<hr>
 	   <br>Aquí vamos hablar sobre sitios para visitar en vacaciones y playas a las cuales va mucha gente</br>
-	<br>Lugares más visitados en verano son :ESpaña, Italia,Portugal , Grecia , Francia y muchos más pero estos son los más famosos</br>
+	<br>Lugares más visitados en verano son :España, Italia,Portugal , Grecia , Francia y muchos más pero estos son los más famosos</br>
 	<br>Muchas personas suelen veranear en andalucia y aqui te piongo algunos ejemplos de las playas que más me gustan a mi</br>
 	<ol> 
 <li>Punta umbría (Huelva)</li> 
